# airflow-django

./: .dockerignore  .env.example  .gitignore  README.md  airflow.cfg  docker-compose.yml  pyproject.toml
dags/: django_test_job.py  test_job.py
django/: Dockerfile  pyproject.toml
django/config/: asgi.py  settings.py  wsgi.py
docker/: Dockerfile
plugins/operators/: django_operator.py
