[tool.poetry]
name = "django-app"
version = "0.1.0"
description = "Sample Django Application"
authors = ["miintto <minjp93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
